--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p><br /></p>
 <h1><b>Weida Liang</b></h1>
 <!-- <p><img src="lx2017.jpeg" width=170 align="right" style=" padding-right: 20px; padding-top: 6px;"/>  -->
-<p><img src="weida.jpg" width=170 align="right" style=" padding-right: 20px; padding-top: 6px;"/>
+<p><img src="weida.jpeg" width=250 align="right" style=" padding-right: 20px; padding-top: 6px;"/>
 <b>Ph.D. student of Computer Science</b> <br /> </p>
 <p>National University of Singapore under supervision of <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> 2022-current<br /> </p>
 <b>Research Assistant on Voice Convertion</b> <br /> </p>
@@ -32,3 +32,9 @@
 <p>tsinghua University under supervision of <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> 2017-2021<br /></p>
 <p><b>Email:</b> lwd17[at]tsinghua.org.com <br />
 <b>Github:</b> <a href="https://github.com/lwd17">lwd17</a><br />
+
+<h2>Bio</h2>
+<p>I am a first-year Ph.D. student advised by <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
+  Previously, I graduated from Tsinghua University with a B.S. degree in Electronic Engineering. I’ve had the fortune to work with Prof. <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> at Tsinghua University.
+  Afterwards, I joined Center for Speech and Language Technologies (CSLT) as a research intern with Dr. <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a> and Prof. <a href="http://wangd.cslt.org/">Dong Wang.
+  Recently I am an intern in Tencent Inc. in Beijing and doing research in ASR and Multimodal Learning, and organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022 with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang, etc.
