--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p><br /></p>
 <h1><b>Weida Liang</b></h1>
 <!-- <p><img src="lx2017.jpeg" width=170 align="right" style=" padding-right: 20px; padding-top: 6px;"/>  -->
-<p><img src="weida.jpeg" width=250 align="right" style=" padding-right: 20px; padding-top: 6px;"/>
+<p><img src="files/weida.jpeg" width=200 align="right" style=" padding-right: 20px; padding-top: 6px;"/>
 <b>Ph.D. student of Computer Science</b> <br /> </p>
 <p>National University of Singapore under supervision of <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> 2022-current<br /> </p>
 <b>Research Assistant on Voice Convertion</b> <br /> </p>
@@ -31,7 +31,8 @@
 <p>Dept of Electronic Engineering<br /> </p>
 <p>tsinghua University under supervision of <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> 2017-2021<br /></p>
 <p><b>Email:</b> lwd17[at]tsinghua.org.com <br />
-<b>Github:</b> <a href="https://github.com/lwd17">lwd17</a><br />
+<a href="https://github.com/lwd17">Github</a> / <a href="https://scholar.google.com/citations?user=d4DPVXsAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
+  <a href="files/Wechat.jpeg">Wechat</a><br />
 
 <h2>Bio</h2>
 <p>I am a first-year Ph.D. student advised by <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
