--- a/index.html
+++ b/index.html
@@ -35,13 +35,44 @@
   <a href="files/Wechat.jpeg">Wechat</a><br />
 
 <h2>Bio</h2>
-<p>I am a first-year Ph.D. student advised by <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
+<p>I am a first-year Ph.D. student advised by Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
   Previously, I graduated from Tsinghua University with a B.S. degree in Electronic Engineering. I’ve had the fortune to work with Prof. <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> at Tsinghua University.
-  Afterwards, I joined Center for Speech and Language Technologies (CSLT) as a research intern with Dr. <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a> and Prof. <a href="http://wangd.cslt.org/">Dong Wang.
-  Recently I am an intern in Tencent Inc. in Beijing and doing research in ASR and Multimodal Learning, and organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022 with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang, etc.
+  Afterwards, I joined Center for Speech and Language Technologies (CSLT) as a research intern with Dr. <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a> and Prof. <a href="http://wangd.cslt.org/">Dong Wang</a>.
+  Recently I am an intern in Tencent Inc. in Beijing and doing research in ASR and Multimodal Learning, and organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022</a> with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>, etc.<br />
 
+  My primary interests lie in various aspects of machine learning (ML), particularly in deep learning as well as its application in speech processing, etc. My recent interest also focuses on differential privacy and its application in ML.
+
+<h2>Research Experience</h2>
   
+<h2>Papers</h2>
+<tr>
+      <td style="padding:10px;width:40%;vertical-align:middle">
+        <img src='figs/paper_map.png' width="100%">
+      </td>
+      <td style="padding:20px;width:60%;vertical-align:middle">
+        <papertitle>Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion</papertitle>
+        <br>
+        <strong>Weida Liang</strong>,
+        <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a>,
+        <a href="http://wangd.cslt.org/">Dong Wang</a>,
+        <a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/index.php/Cslt-member-eng#Wenqiang_Du_.28.E6.9D.9C.E6.96.87.E5.BC.BA.29">Wenqiang Du</a>
+        <br>
+        <a href="https://arxiv.org/pdf/2204.03847.pdf">pdf</a> /
+        <a href="https://gitlab.com/lwd17/enhanced_examplar_ae/-/tree/main/">code</a> / 
+        <a href="http://166.111.134.19:7777/liangwd/cycle/">project padge</a>
+      </td>
+    </tr>
+<h2>Patent</h2>
+A cycle loss based voice conversion device 2022  
+ <h2>Honors &amp; Awards</h2>
+  <b>Meritorious Winner</b> in Mathematical Contest in Modeling 2019
+  <b>Bronze Medal</b> in Chinese Mathematical Olympiad 2017
   
+<ul>
+    <a href="http://s11.flagcounter.com/more/6Ll"><img
+            src="http://s11.flagcounter.com/count2/6Ll/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
+            alt="Flag Counter" border="0"></a>
+</ul>
   
 </div>
 </body>
