--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <!-- <p><img src="lx2017.jpeg" width=170 align="right" style=" padding-right: 20px; padding-top: 6px;"/>  -->
 <p><img src="files/weida.jpeg" width=200 align="right" style=" padding-right: 20px; padding-top: 6px;"/>
 <b>Ph.D. student of Computer Science</b> <br /> </p>
-<p>National University of Singapore under supervision of <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> 2022-current<br /> </p>
+<p>National University of Singapore under supervision of <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a>, 2022-current<br /> </p>
 <b>Research Assistant on Voice Convertion</b> <br /> </p>
-<p>Center for Speech and Language Technologies under supervision of <a href="http://wangd.cslt.org/">Dong Wang</a> 2021-2022<br /> </p>
+<p>Center for Speech and Language Technologies under supervision of <a href="http://wangd.cslt.org/">Dong Wang</a>, 2021-2022<br /> </p>
 <p><b>Bachelor of Science in Engineering</b> <br /> </p>
 <p>Dept of Electronic Engineering<br /> </p>
-<p>tsinghua University under supervision of <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> 2017-2021<br /></p>
+<p>tsinghua University under supervision of <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a>, 2017-2021<br /></p>
 <p><b>Email:</b> lwd17[at]tsinghua.org.com <br />
 <a href="https://github.com/lwd17">Github</a> / <a href="https://scholar.google.com/citations?user=d4DPVXsAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
   <a href="files/Wechat.jpeg">Wechat</a><br />
@@ -45,33 +45,33 @@
 <h2>Research Experience</h2>
   
 <h2>Papers</h2>
-<tr>
-      <td style="padding:10px;width:40%;vertical-align:middle">
-        <img src='figs/paper_map.png' width="100%">
-      </td>
+
+        <img src='figs/paper_map.png' width="50%">
+
       <td style="padding:20px;width:60%;vertical-align:middle">
         <papertitle>Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion</papertitle>
-        <br>
-        <strong>Weida Liang</strong>,
+        <br />
+        <p><b>Weida Liang</b>,
         <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a>,
         <a href="http://wangd.cslt.org/">Dong Wang</a>,
         <a href="http://cslt.riit.tsinghua.edu.cn/mediawiki/index.php/Cslt-member-eng#Wenqiang_Du_.28.E6.9D.9C.E6.96.87.E5.BC.BA.29">Wenqiang Du</a>
-        <br>
+        <br />
         <a href="https://arxiv.org/pdf/2204.03847.pdf">pdf</a> /
         <a href="https://gitlab.com/lwd17/enhanced_examplar_ae/-/tree/main/">code</a> / 
-        <a href="http://166.111.134.19:7777/liangwd/cycle/">project padge</a>
+        <a href="http://166.111.134.19:7777/liangwd/cycle/">project page</a>
       </td>
     </tr>
 <h2>Patent</h2>
-A cycle loss based voice conversion device 2022  
+A cycle loss based voice conversion device, 2022  
  <h2>Honors &amp; Awards</h2>
-  <b>Meritorious Winner</b> in Mathematical Contest in Modeling 2019
-  <b>Bronze Medal</b> in Chinese Mathematical Olympiad 2017
+  <b>Meritorious Winner</b> in Mathematical Contest in Modeling, 2019<br />
+  <b>Bronze Medal</b> in Chinese Mathematical Olympiad, 2017
   
 <ul>
-    <a href="http://s11.flagcounter.com/more/6Ll"><img
-            src="http://s11.flagcounter.com/count2/6Ll/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
-            alt="Flag Counter" border="0"></a>
+    <a href="https://info.flagcounter.com/xFah">
+      <img src="https://s11.flagcounter.com/count2/xFah/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" 
+           alt="Flag Counter" border="0">
+  </a>
 </ul>
   
 </div>
