--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
 <h2>Papers</h2>
 
         <img src='figs/paper_map.png' width="50%">
-
+     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <tr>
       <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion</papertitle>
+        <img src='figs/paper_map.png' width="100%">
+      </td>
+           <td style="padding:20px;width:60%;vertical-align:middle">
+        Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion
         <br />
         <p><b>Weida Liang</b>,
         <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a>,
