--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
   
 <h2>Papers</h2>
 
-        <img src='figs/paper_map.png' width="50%">
      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
          <tr>
       <td style="padding:20px;width:60%;vertical-align:middle">
@@ -65,6 +64,7 @@
         <a href="http://166.111.134.19:7777/liangwd/cycle/">project page</a>
       </td>
     </tr>
+       </tbody></table>
 <h2>Patent</h2>
 A cycle loss based voice conversion device, 2022  
  <h2>Honors &amp; Awards</h2>
