--- a/index.html
+++ b/index.html
@@ -43,15 +43,48 @@
   My primary interests lie in various aspects of machine learning (ML), particularly in deep learning as well as its application in speech processing, etc. My recent interest also focuses on differential privacy and its application in ML.
 
 <h2>Research Experience</h2>
-  
+  <table width="50%" align="center" border="0" cellpadding="10"><tbody>
+    <tr>
+      <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle"><img src="figs/NUS.png", width="90%"></td>
+      <td width="80%" valign="center" >
+        <b>National University of Singapore</b>
+        <br /> 2022.8(expected) - 
+        <br />
+        <br /> <b>Ph.D. Student in Computer Science</b>
+        <br /> Advisor: Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a>
+      </td>
+    </tr>
+    <tr>
+      <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle;"><img src="figs/tencent.png", width="90%"></td>
+      <td width="80%" valign="center">
+        <b>Tencent</b>
+        <br /> 2022.3 - Present
+        <br>
+        <br> <b>Research Intern</b>
+        <br> Advisor: Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>
+      </td>
+    </tr>
+    <tr>
+      <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle"><img src="figs/THU.png", width="90%"></td>
+      <td width="80%" valign="center">
+        <b>Tsinghua University</b>
+        <br> 2017.8 - 2021.6
+        <br>
+        <br> <b>B.S. in Electronic Engineering</b>
+        <br> Advisor: Prof. <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a>
+      </td>
+    </tr>
+
+
+    </tbody></table>
 <h2>Papers</h2>
 
      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
          <tr>
-      <td style="padding:20px;width:30%;vertical-align:middle">
+      <td style="padding:20px;width:40%;vertical-align:middle">
         <img src='figs/paper_map.png' width="100%">
       </td>
-           <td style="padding:20px;width:70%;vertical-align:middle">
+           <td style="padding:20px;width:60%;vertical-align:middle">
         Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion
         <br />
         <p><b>Weida Liang</b>,
