--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </td>
     </tr>
     <tr>
-      <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle;"><img src="figs/tencent.png", width="90%"></td>
+      <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle;"><img src="figs/tencent.jpeg", width="90%"></td>
       <td width="80%" valign="center">
         <b>Tencent</b>
         <br /> 2022.3 - Present
