--- a/index.html
+++ b/index.html
@@ -21,18 +21,30 @@
 <div id="layout-content">
 <p><br /></p>
 <h1><b>Weida Liang</b></h1>
-<!-- <p><img src="lx2017.jpeg" width=170 align="right" style=" padding-right: 20px; padding-top: 6px;"/>  -->
-<p><img src="files/weida.jpeg" width=200 align="right" style=" padding-right: 20px; padding-top: 6px;"/>
-I am a first-year Ph.D. student advised by Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <tr style="padding:0px">
+      <td style="padding:2.5%;width:63%;vertical-align:middle">
+        <p style="text-align:center">
+  I am a first-year Ph.D. student advised by Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
   Previously, I graduated from Tsinghua University with a B.S. degree in Electronic Engineering. I’ve had the fortune to work with Prof. <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> at Tsinghua University.
   Afterwards, I joined Center for Speech and Language Technologies (CSLT) as a research intern with Dr. <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a> and Prof. <a href="http://wangd.cslt.org/">Dong Wang</a>.
   Recently I am an intern in Tencent Inc. in Beijing and doing research in ASR and Multimodal Learning, and organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022</a> with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>, etc.<br />
 
   My primary interests lie in various aspects of machine learning (ML), particularly in deep learning as well as its application in speech processing, etc. My recent interest also focuses on differential privacy and its application in ML.
-
-<p><b>Email:</b> lwd17[at]tsinghua.org.com <br />
-<a href="https://github.com/lwd17">Github</a> / <a href="https://scholar.google.com/citations?user=d4DPVXsAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
+        </p>
+          <p><b>Email:</b> lwd17[at]tsinghua.org.com <br />
+    <a href="https://github.com/lwd17">Github</a> / <a href="https://scholar.google.com/citations?user=d4DPVXsAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
   <a href="files/Wechat.jpeg">Wechat</a><br />
+  </p>
+      </td>
+      <td style="padding:2.5%;width:35%;max-width:35%">
+        <a href="files/weida.jpeg"><img style="width:95%;max-width:95%" alt="profile photo" src="files/weida.jpeg" class="hoverZoomLink"></a>
+      </td>
+    </tr>
+    </tbody></table>
+
+
+
 
 <h2>Research Experience</h2>
   <table width="50%" align="center" border="0" cellpadding="10"><tbody>
