--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <img src='figs/paper_map.png' width="100%">
       </td>
            <td style="padding:20px;width:60%;vertical-align:middle">
-        Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion
+        Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion. Interspeech 2022 submitted
         <br />
         <p><b>Weida Liang</b>,
         <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a>,
@@ -108,7 +108,7 @@ A cycle loss based voice conversion device, 2022
  <h2>Honors &amp; Awards</h2>
   <b>Meritorious Winner</b> in Mathematical Contest in Modeling, 2019<br />
   <b>Bronze Medal</b> in Chinese Mathematical Olympiad, 2017
-  
+  <br /><br />
 <ul>
     <a href="https://info.flagcounter.com/xFah">
       <img src="https://s11.flagcounter.com/count2/xFah/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" 
