--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
       </td>
     </tr>
     <tr>
+      <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle"><img src="figs/CSLT.png", width="90%"></td>
+      <td width="80%" valign="center">
+        <b>Center for Speech and Language Technologies</b>
+        <br> 2021.8 - 2022.4
+        <br>
+        <br> <b>Research Intern</b>
+        <br> Advisor: Prof. <a href="http://wangd.cslt.org/">Dong Wang</a>
+      </td>
+    </tr>
+    <tr>
       <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle"><img src="figs/THU.png", width="90%"></td>
       <td width="80%" valign="center">
         <b>Tsinghua University</b>
