--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   I am a first-year Ph.D. student advised by Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
   Previously, I graduated from Tsinghua University with a B.S. degree in Electronic Engineering. I’ve had the fortune to work with Prof. <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> at Tsinghua University.
   Afterwards, I joined Center for Speech and Language Technologies (CSLT) as a research intern with Dr. <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a> and Prof. <a href="http://wangd.cslt.org/">Dong Wang</a>.
-  Recently I am an intern in Tencent Inc. in Beijing and doing research in ASR and Multimodal Learning, and organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022</a> with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>, etc.
+  Recently I am an intern in ASR Oteam, Tencent Inc. in Beijing and doing research in ASR and Multimodal Learning, and organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022</a> with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>, etc.
         </p>
         <p>
   My primary interests lie in various aspects of machine learning (ML), particularly in deep learning as well as its application in speech processing, etc. My recent interest also focuses on differential privacy and its application in ML.
