--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   I am a first-year Ph.D. student advised by Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
   Previously, I graduated from Tsinghua University with a B.S. degree in Electronic Engineering. I’ve had the fortune to work with Prof. <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> at Tsinghua University.
   Afterwards, I joined Center for Speech and Language Technologies (CSLT) as a research intern with Dr. <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a> and Prof. <a href="http://wangd.cslt.org/">Dong Wang</a>.
-  Recently I am an intern in ASR Oteam, Tencent Inc. in Beijing and doing research in ASR and Multimodal Learning, and organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022</a> with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>, etc.
+Then I became an intern in ASR Oteam, Tencent Inc. in Beijing and did research in ASR and Multimodal Learning, organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022</a> with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>, etc.
         </p>
         <p>
-  My primary interests lie in various aspects of machine learning (ML), particularly in deep learning as well as its application in speech processing, etc. My recent interest also focuses on differential privacy and its application in ML.
+  My primary interests lie in various aspects of machine learning (ML), particularly in deep learning as well as its application in differential privacy, etc. My previous interest also focuses on audio processing.
         </p>
           <p><b>Email:</b> lwd17[at]tsinghua.org.com <br />
     <a href="https://github.com/lwd17">Github</a> / <a href="https://scholar.google.com/citations?user=d4DPVXsAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
@@ -95,6 +95,18 @@
 <h2>Papers</h2>
 
      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+         <tr>
+      <td style="padding:20px;width:40%;vertical-align:middle">
+        <img src='figs/paper_map.png' width="100%">
+      </td> 
+          <td style="padding:20px;width:60%;vertical-align:middle">
+        ICPR 2022 Challenge on Multi-Modal Subtitle Recognition. ICPR 2022 accepted
+        <br />
+            Shan Huang, SHEN HUANG, Li Lu, PENGFEI HU, Lijuan Wang, Xiang Wang*, Jian Kang, <p><b>Weida Liang</b>, Lianwen Jin, Yuliang Liu, Yaqiang Wu
+        <br />
+        <a href="https://icprmsr.github.io/">project page</a>
+      </td>
+    </tr> 
          <tr>
       <td style="padding:20px;width:40%;vertical-align:middle">
         <img src='figs/paper_map.png' width="100%">
