--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Then I became an intern in ASR Oteam, Tencent Inc. in Beijing and did research i
      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
          <tr>
       <td style="padding:20px;width:40%;vertical-align:middle">
-        <img src='figs/paper_map.png' width="100%">
+        <img src='figs/icpr_track2.png' width="100%">
       </td> 
           <td style="padding:20px;width:60%;vertical-align:middle">
         ICPR 2022 Challenge on Multi-Modal Subtitle Recognition. ICPR 2022 accepted
