--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Then I became an intern in ASR Oteam, Tencent Inc. in Beijing and did research i
           <td style="padding:20px;width:60%;vertical-align:middle">
         ICPR 2022 Challenge on Multi-Modal Subtitle Recognition. ICPR 2022 accepted
         <br />
-            Shan Huang, SHEN HUANG, Li Lu, PENGFEI HU, Lijuan Wang, Xiang Wang*, Jian Kang, <p><b>Weida Liang</b>, Lianwen Jin, Yuliang Liu, Yaqiang Wu
+            Shan Huang, SHEN HUANG, Li Lu, PENGFEI HU, Lijuan Wang, Xiang Wang*, Jian Kang, <b>Weida Liang</b>, Lianwen Jin, Yuliang Liu, Yaqiang Wu
         <br />
         <a href="https://icprmsr.github.io/">project page</a>
       </td>
