--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Then I became an intern in ASR Oteam, Tencent Inc. in Beijing and did research i
         <img src='figs/icpr_track2.png' width="100%">
       </td> 
           <td style="padding:20px;width:60%;vertical-align:middle">
-        ICPR 2022 Challenge on Multi-Modal Subtitle Recognition. ICPR 2022 accepted
+        ICPR 2022 Challenge on Multi-Modal Subtitle Recognition. <p>ICPR 2022 accepted
         <br />
             Shan Huang, SHEN HUANG, Li Lu, PENGFEI HU, Lijuan Wang, Xiang Wang*, Jian Kang, <b>Weida Liang</b>, Lianwen Jin, Yuliang Liu, Yaqiang Wu
         <br />
@@ -112,7 +112,7 @@ Then I became an intern in ASR Oteam, Tencent Inc. in Beijing and did research i
         <img src='figs/paper_map.png' width="100%">
       </td>
            <td style="padding:20px;width:60%;vertical-align:middle">
-        Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion. Interspeech 2022 submitted
+        Enhanced exemplar autoencoder with cycle consistency loss in any-to-one voice conversion.  <p>Interspeech 2022 submitted
         <br />
         <p><b>Weida Liang</b>,
         <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a>,
