--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <tr style="padding:0px">
       <td style="padding:2.5%;width:63%;vertical-align:middle">
         <p>
-  I am a first-year Ph.D. student advised by Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a> at the School of Computing (SoC), National University of Singapore (NUS). 
+  I am a third-year Ph.D. student advised by Prof. <a href="https://ml.comp.nus.edu.sg/kawaguchi">Kenji Kawaguchi</a> at the School of Computing (SoC), National University of Singapore (NUS). 
   Previously, I graduated from Tsinghua University with a B.S. degree in Electronic Engineering. I’ve had the fortune to work with Prof. <a href="http://web.ee.tsinghua.edu.cn/lidongmei/en/index.htm">Dongmei Li</a> at Tsinghua University.
   Afterwards, I joined Center for Speech and Language Technologies (CSLT) as a research intern with Dr. <a href="http://166.111.134.19:7777/lilt/">Lantian Li</a> and Prof. <a href="http://wangd.cslt.org/">Dong Wang</a>.
 Then I became an intern in ASR Oteam, Tencent Inc. in Beijing and did research in ASR and Multimodal Learning, organizing <a https://icprmsr.github.io/index.html>ICPR MSR 2022</a> with Dr. <a href="https://scholar.google.com/citations?hl=zh-CN&user=aNKM4-wAAAAJ">Jian Kang</a>, etc.
         </p>
         <p>
-  My primary interests lie in various aspects of machine learning (ML), particularly in deep learning as well as its application in differential privacy, etc. My previous interest also focuses on audio processing.
+ My research centers on data-centric and generative AI, with a particular emphasis on curating high-quality datasets to enhance the performance and trustworthiness of models such as diffusion and multimodal language models. My previous interest also focuses on audio processing.
         </p>
-          <p><b>Email:</b> lwd17[at]tsinghua.org.com <br />
+          <p><b>Email:</b> weida_liang[at]u.nus.edu <br />
     <a href="https://github.com/lwd17">Github</a> / <a href="https://scholar.google.com/citations?user=d4DPVXsAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
   <a href="files/Wechat.jpeg">Wechat</a><br />
   </p>
