--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Then I became an intern in ASR Oteam, Tencent Inc. in Beijing and did research i
         <br /> 2022.8 - Present
         <br />
         <br /> <b>Ph.D. Student in Computer Science</b>
-        <br /> Advisor: Prof. <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Xiaokui Xiao</a>
+        <br /> Advisor: Prof. <a href="https://ml.comp.nus.edu.sg/kawaguchi">Kenji Kawaguchi</a>
       </td>
     </tr>
     <tr>
